Fixed problem where the content actions bar was accidentally clickable in VisualEditor (was partially covering the save button).

--- a/steep-skin/resources/content-actions.css
+++ b/steep-skin/resources/content-actions.css
@@ -30,8 +30,7 @@
 }
 
 .ve-activating .content-actions, .ve-active .content-actions, .ve-activated .content-actions {
-    opacity: 0;
-    pointer-events: none;
+    display: none;
 }
 
 .content-action {
